# pdftext

./: benchmark.py  extract_text.py  pyproject.toml
pdftext/: extraction.py  inference.py  model.py  postprocessing.py  settings.py
pdftext/pdf/: chars.py  utils.py
scripts/: verify_benchmark_scores.py
